	handling is now fixed: get_cdata/1 will now return binaries;
	#xmlnselement and #xmlelment store these this way. normalize/1 is also
	fixed to do what it is supposed to do (as specified in the DOM
	specification). document_fragment_to_list/3 now escapes what needs to
	be escaped and doesn't forget to normalize CDATA before. Documentation
	is up-to-date.
	(get_cdata_as_list): New function to get character data as string.
	(escape_using_cdata): Support for escaping with CDATA sections instead
	of entities was taken from ejabberd. It's disabled by default.

	* testsuite/check_xml_converters.erl,
	testsuite/check_xml_cdata_handlers.erl, testsuite/check_xml_path.erl:
	Update testsuite to handle above changes.

	* src/server/exmpp_server_sasl.erl,
	src/server/exmpp_server_legacy_auth.erl,
	src/server/exmpp_server_binding.erl, src/core/exmpp_stream.erl,
	src/core/exmpp_stanza.erl, src/client/exmpp_client_binding.erl,
	src/client/exmpp_client_compression.erl,
	src/client/exmpp_client_sasl.erl: Use get_cdata_as_list/1 instead of
	get_cdata/1.

2008-06-04  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	With these changes, ejabberd 2.0.x can run without modifications with
	the exmpp compat layer.

	* src/core/exmpp_xmlstream.erl: Add support for old xmlstreamstart
	tuple. The format to use can be chosen by calling the new start/3
	function. Be careful, the old format is selected by default now,
	instead of the new one as before.
	(start/1): Remove the clause that takes only XML parser options
	because the API is confusing.

	* testsuite/check_xmlstream.erl: Use explicitly the new xmlstreamstart
	format.

	* src/compat/xml_stream.erl, src/Emakefile.in, src/Makefile.am,
	ebin/Makefile.am, ebin/exmpp.app.in, doc/Makefile.am: Add xml_stream
	to the compat layer.

	* src/core/exmpp_xmlstream.erl: A few style changes.

2008-06-03  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* src/core/exmpp_internals.erl (gen_setopts): Fixed a bug where